@@ -1,5 +1,11 @@
 2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* ViewVolume.h:
+	* ViewVolume.cpp:
+	* X3DBrowserContext.cpp: 
+
+2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Billboard.cpp: 
 
 2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>
