@@ -2,6 +2,10 @@
 
 	* Titania.userprefs: 
 
+2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Titania.userprefs: 
+
 2013-07-01  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Titania.userprefs: 
